[package]
name = "hamsando"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = "0.15.11"
strum = "0.27.1"
strum_macros = "0.27.1"
addr = "0.15.6"
directories = "6.0.0"
url = { version = "2.5.4", features = ["serde"] }
log = { version = "0.4.27", features = ["std", "max_level_debug", "release_max_level_warn"] }
env_logger = "0.11.7"
itertools = "0.14.0"
anyhow = "1.0.97"
thiserror = "2.0.12"
